--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-scroll": "^1.8.3",
+    "firebase": "8.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "typescript": "^4.4.2",
